# MurmurStack

./: .gitignore  README.md  justfile  landing-page-layout.md
.github/workflows/: build-image.yaml
backend/: Dockerfile  main.py  requirements.txt
backend/src/: server.py  transcription.py
demo-server/: constants.py  pyproject.toml  server.py  transcribe.py
frontend/: .env  .env.production  README.md  landing-page-layout.md  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html  manifest.json  sitemap.xml
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Demo.tsx  Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  TranscriptionApp.js  TranscriptionApp.tsx  Waitlist.jsx
frontend/src/styles/: TranscriptionApp.css
infra/: acm.tf  dynamo.tf  ecr.tf  eks.tf  iam.tf  lb.tf  main.tf  route53.tf
k8s/: murmur-deploy.yaml  murmur-sa.yaml  murmur-svc.yaml  murmur-tgb.yaml  sestream-deploy.yaml  sestream-ns.yaml  sestream-svc.yaml  sestream-tgb.yaml
legacy_frontend/: index.html  mic_client.js
murmur-server/: Dockerfile  env.py  pyproject.toml  server.py  transcribe.py  vad.py
